<resources>
    <string name="app_name">EverydayHero</string>

    <string name="title_activity_objective_list">Your Objectives</string>
    <string name="ReviewActivityTitle">Objective Review</string>
    <string name="EditActivityTitle">Objective Edit</string>

    <string name="action_settings">Settings</string>
    <string name="edit_button">Edit This Objective</string>
    <string name="separator_details">DETAILS</string>
    <string name="separator_progress">PROGRESS</string>
    <string name="separator_duration">DURATION SETTINGS</string>
    <string name="progress">Objective Progress:</string>
    <string name="duration">Challenge duration:</string>
    <string name="duration_days">days</string>
    <string name="duration_starting">Starting:</string>

    <string-array name="startingDates">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Pick Date&#8230;</item>
    </string-array>
    <string name="title_activity_main_tab">EverydayHero</string>

    <!--MainTabActivity-->
    <string name="sectGoals">OBJECTIVES</string>
    <string name="sectToday">TODAY</string>
    <string name="sectProfile">MY PROFILE</string>

    <!--ObjectiveEdit-->
    <string name="objEdit">Objective Edit</string>

    <!--WelcomeFragment-->
    <string name="welcome_text">Hello, </string>
    <string name="welcome_text_learnmore">Let us learn \n something more about you! </string>
    <string name="btnContinue">Let\'s go!</string>
    <string name="name_hint">Enter your name</string>
    <string name="height_hint">Enter your height (m)</string>
    <string name="weight_hint">Enter your weight (kg)</string>
    <string name="age_hint">Enter your age</string>


    <!--No Objectives yet? Fragment-->
    <string name="noObjectives">No objectives yet?\nStart with something small :)</string>

    <!--ProfileFragment-->
    <string name="achievements">YOUR ACHIEVEMENTS</string>
    <string name="profileDetails">DETAILS</string>
    <string name="profileAge">Your Age:</string>
    <string name="profileBMI">Your BMI:</string>

    <!--TodayFragment-->
    <string name="hoorayExclamation">Yay!</string>
    <string name="didExclamation">Yay! You did it!</string>
    <string name="noTasks">You have  no tasks\n for today.</string>

</resources>
