<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editHeight"
            android:layout_alignStart="@+id/editHeight"
            android:layout_below="@+id/txtLetUsLearn"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/age_hint"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editHeight"
            android:layout_alignStart="@+id/editHeight"
            android:layout_below="@+id/editHeight"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/welcome_text"
            android:textSize="36sp"/>

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editAge"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/height_hint"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtWelcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:gravity="center_horizontal"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:textSize="24sp"/>


        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtWelcome"
            android:layout_alignStart="@+id/txtWelcome"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="16dp"
            android:text="@string/btnContinue"/>

        <TextView
            android:id="@+id/txtLetUsLearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text_learnmore"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editWeight"
            android:layout_alignStart="@+id/editWeight"
            android:layout_below="@+id/editWeight"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:text="Male"
                android:visibility="visible"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female"
                android:visibility="visible"/>
        </RadioGroup>

    </RelativeLayout>
    </ScrollView>
